Nexus 2 Openshift Dockerfile, templates and scripts.